src/test/deca/context/invalid/49_NonExistantSelect.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 15: ContextualError: x isn't defined in this class
// 
// Historique:
//    cree le 01/01/2022

class A {
}
{
   A a = new A();
   // Doit etre refuse.
   int x = a.x;
}
